@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-TAG=v2
+TAG=v3
 REGISTRY=gcr.io/google_containers
 IMAGE=gci-mounter
 
